@@ -432,6 +432,7 @@ mln/data/approx/essential.hh \
 mln/data/approx/median.hh \
 mln/data/compare.hh \
 mln/data/compute.hh \
+mln/data/compute_in_window.hh \
 mln/data/convert.hh \
 mln/data/essential.hh \
 mln/data/fast_median.hh \
@@ -478,6 +479,7 @@ mln/debug/put_word.hh \
 mln/debug/quiet.hh \
 mln/debug/slices_2d.hh \
 mln/debug/superpose.hh \
+mln/debug/trace.hh \
 mln/debug/z_order.hh \
 mln/display/all.hh \
 mln/display/essential.hh \
@@ -575,6 +577,8 @@ mln/fun/v2v/rgb8_to_rgbn.hh \
 mln/fun/v2v/rgb_to_hsl.hh \
 mln/fun/v2v/rgb_to_int_u.hh \
 mln/fun/v2v/rgb_to_luma.hh \
+mln/fun/v2v/round.hh \
+mln/fun/v2v/round_sat.hh \
 mln/fun/v2v/saturate.hh \
 mln/fun/v2v/wrap.hh \
 mln/fun/v2w2v/all.hh \
@@ -616,6 +620,7 @@ mln/fun/x2x/rotation.hh \
 mln/fun/x2x/translation.hh \
 mln/geom/all.hh \
 mln/geom/bbox.hh \
+mln/geom/bottom_left.hh \
 mln/geom/chamfer.hh \
 mln/geom/complex_geometry.hh \
 mln/geom/crop.hh \
@@ -643,6 +648,7 @@ mln/geom/seeds2tiling_roundness.hh \
 mln/geom/size1d.hh \
 mln/geom/size2d.hh \
 mln/geom/size3d.hh \
+mln/geom/top_right.hh \
 mln/geom/translate.hh \
 mln/geom/vertical_symmetry.hh \
 mln/graph/all.hh \
@@ -683,6 +689,7 @@ mln/io/fld/max_components.hh \
 mln/io/fld/save.hh \
 mln/io/fld/write_header.hh \
 mln/io/magick/all.hh \
+mln/io/magick/internal/init_magick.hh \
 mln/io/magick/load.hh \
 mln/io/magick/save.hh \
 mln/io/off/all.hh \
@@ -693,6 +700,8 @@ mln/io/pbm/load.hh \
 mln/io/pbm/save.hh \
 mln/io/pbms/all.hh \
 mln/io/pbms/load.hh \
+mln/io/pdf/get_header.hh \
+mln/io/pdf/load.hh \
 mln/io/pfm/all.hh \
 mln/io/pfm/load.hh \
 mln/io/pfm/save.hh \
@@ -1004,6 +1013,7 @@ mln/pw/image.hh \
 mln/pw/internal/image_base.hh \
 mln/pw/value.hh \
 mln/pw/var.hh \
+mln/registration/icp.hh \
 mln/set/all.hh \
 mln/set/card.hh \
 mln/set/compute.hh \
@@ -1059,14 +1069,6 @@ mln/topo/skeleton/breadth_first_thinning.hh \
 mln/topo/skeleton/crest.hh \
 mln/topo/skeleton/is_simple_point.hh \
 mln/topo/static_n_face_iter.hh \
-mln/trace/all.hh \
-mln/trace/entering.hh \
-mln/trace/essential.hh \
-mln/trace/exiting.hh \
-mln/trace/quiet.hh \
-mln/trace/resume.hh \
-mln/trace/stop.hh \
-mln/trace/warning.hh \
 mln/trait/accumulator/print.hh \
 mln/trait/accumulator/props.hh \
 mln/trait/accumulators.hh \
